# crystlalline

./: .env  Cargo.toml  config.toml
migrations/: 20240330180637_typing_orgroam_db.sql
src/: db_plugin.rs  main.rs
src/orgroam/: mod.rs  sqlite_con.rs  tests.rs  types.rs  utils.rs
src/orgroam/emacs_reader/: mod.rs  reader.rs  testdata.rs
