[package]
name = "crystalline"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
futures = "0.3.18"
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio", "tls-native-tls"] }
tokio = { version = "1.36.0", features = ["full"] }
