[package]
name = "crystalline"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
bevy = { version = "0.14.0" }
config = "0.14.0"
dotenvy = "0.15.7"
futures = "0.3.18"
sexp = "1.1.4"
sqlx = { version = "0", features = ["sqlite", "runtime-async-std", "tls-native-tls"] }

[workspace]
resolver = "2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
